# ROS-Beginner-Examples

./: CMakeLists.txt  demo_topic_publisher.cpp  demo_topic_subscriber.cpp
Eng_7_ro/workshop_3/MStudentID_demo_pkg/: tracks.yaml
Eng_7_ro/workshop_3/MStudentID_demo_pkg/launch/: demo_msg.launch  demo_service.launch  demo_topic.launch
Eng_7_ro/workshop_4/MystudentID_robot_description_pkg/: CMakeLists.txt  package.xml
Eng_7_ro/workshop_4/MystudentID_robot_description_pkg/launch/: view_arm.launch  view_demo.launch  view_mobile_robot.launch  view_pan_tilt_urdf.launch  view_pan_tilt_xacro.launch
MStudentID_demo_pkg/: CMakeLists.txt  package.xml
Workshop Files/: Workshop 01 ROS Installation and basics.docx  Workshop 02 Introduction to ROS.docx
mystudentid_robot_description_pkg/: CMakeLists.txt  package.xml
mystudentid_robot_description_pkg/launch/: view_arm.launch  view_demo.launch  view_mobile_robot.launch  view_pan_tilt_urdf.launch  view_pan_tilt_xacro.launch
mystudentid_robot_description_pkg/urdf/: seven_dof_arm.xacro
mystudentid_robot_description_pkg/urdf/sensors/: xtion_pro_live.urdf.xacro
seven_dof_arm_confi/: package.xml
seven_dof_arm_confi/launch/: planning_context.launch
seven_dof_arm_gazebo/: CMakeLists.txt  package.xml
seven_dof_arm_gazebo/launch/: seven_dof_arm_with_rgbd_world.launch  seven_dof_arm_world.launch  seven_dof_arm_world_grasping.launch
seven_dof_arm_gazebo/worlds/: grasp_final.sdf
